@@ -1,0 +1,8 @@
+7 6
+knife 0.5 0.2 0.8 0 0 0
+cat 0.5 0.6 0 0 0.1 0.3
+dog 1.1 0.8 0.1 0.4 0.3 0.2
+boat 0.6 0.4 0.2 0 0 0
+cup 1 0.1 0.1 0 0 0
+pig 0.1 0.2 0 0 0.1 0.3
+banana 0.1 0 0 0 0.2 0
